# ingenier-a-de-datos

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  start.sh  start_all.sh
backend/: .gitignore  docker-compose.yml  main.py  populate_db.py  pyproject.toml  start.bat
backend/alembic/: env.py
backend/alembic/versions/: 21c2a0d6048e_create_all_tables.py  73619c08a0fa_add_incidents_crud.py  84aa1d1b483c_add_weather_records.py  9f62d2c2480b_add_delay_record_enrichment_fields.py  a1b2c3d4e5f6_add_incident_categories_and_enrichment.py  a3b4c5d6e7f8_add_composite_indexes_for_performance.py  b2c3d4e5f6g7_add_location_coordinates_and_route_network.py  bc8ec9f79c37_initial.py  d740c004c18d_extend_user_roles.py  f0f6b391d24c_initial_migration.py
backend/src/: config.py
backend/src/db/: aed.ipynb  models.py  session.py
backend/src/db/data/: auth.db
backend/src/db/initial_data/: ttc-streetcar-delay-data-2017.csv  ttc-streetcar-delay-data-2020.csv  ttc-streetcar-delay-data-2021.csv  ttc-streetcar-delay-data-2022.csv  ttc-streetcar-delay-data-2023.csv  ttc-streetcar-delay-data-2024.csv  ttc-streetcar-delay-data-2025.csv
backend/src/routes/: __init__.py  incidents.py
backend/src/routes/analytics/: analytics.py
backend/src/routes/auth/: Auth.py
backend/src/routes/schemas/: schemas_analytics.py  schemas_auth.py
backend/src/routes/test_routes/: test.py
backend/src/utils/: auth.py  fetch_weather.py  load_data.py
frontend/id/: next.config.ts  package-lock.json  package.json
frontend/id/app/: globals.css  layout.tsx  page.tsx
(+14 files in other folders)
