[project]
name = "id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "alembic==1.18.4",
    "aiosqlite>=0.20.0",
    "dotenv==0.9.9",
    "fastapi==0.136.3",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "bcrypt==4.0.1",
    "passlib==1.7.4",
    "python-jose==3.5.0",
    "python-multipart==0.0.30",
    "requests==2.34.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "uvicorn==0.48.0",
]
